--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>MY RESUME</title>
 </head>
 <body>
+    <center>My Resume</center>
+    <hr>
+    NAME : SUKSAWAT SAELIM
     
+
 </body>
 </html>
