--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <center>My Resume</center>
     <hr>
-    NAME : SUKSAWAT SAELIM
+    <P>NAME : SUKSAWAT SAELIM</P>
+    <P>DEPARTMENT : INFORMATION TECHNOLOGY</P>
     
 
 </body>
