--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <hr>
     <P>NAME : SUKSAWAT SAELIM</P>
     <P>DEPARTMENT : INFORMATION TECHNOLOGY</P>
+    <a href="edu.html">Education</a>
     
 
 </body>
